# report-my-team-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  launcher.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/report_my_team/: __main__.py  game_monitor.py  lcu.py  models.py  reporter.py  state.py  tray.py
