[project]
name = "report-my-team-py"
version = "1.2.1"
description = "Automatically reports League of Legends players at end of game via LCU API"
readme = "README.md"
authors = [
    { name = "Levy Nunes", email = "levy.vix@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]

[project.scripts]
report-my-team = "report_my_team.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/report_my_team"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pyright>=1.1.408",
]
